calc.css
body {
  background: #444 !important;
}

@font-face {
    font-family: "Paintball";
    src: url(./ProjectPaintball.woff) format("woff"),
    url(./ProjectPaintball.ttf) format("ttf");
}

@font-face {
    font-family: "Splatfont";
    src: url(./Splatfont2.woff) format("woff"),
    url(./ProjectPaintball.woff) format("ttf");
}

.equal {
  display: flex;
  display: -webkit-flex;
  flex-wrap: wrap;
}

.splatheader {
  background: #cc1053 !important;
}

.abilityicon {
  border-radius: 50%;
  width:56px;
  height:56px;
  background:#000;
  border: 2px solid #888;
  border-right: 0px;
  border-bottom: 0px;
  background-size:100%;
  box-shadow: 0 0 0 1px #000;
}

.gear .abilityicon.large {
  margin-top:4px;
}

.small {
  width:48px;
  height:48px;
}

.large {
  width:64px;
  height:64px;
}

.abilitybox {
  text-align:center;
}

.abilitybox .abilityicon {
  margin-left: 4px;
  margin-bottom:4px;
  margin-right: 4px;
}

.ability1 {
  background: #fe2472;
}

.ability2 {
  background: #cc1053;
}

.statbox {
font-family: "Splatfont";
  background: repeating-linear-gradient(
  45deg,
  #c9c9c9,
  #c9c9c9 30px,
  #bbbbbb 30px,
  #bbbbbb 60px
);
  background-attachment:fixed;
}

.statlabel {
  background: rgba(0,0,0,0.6);
  font-family: "Splatfont";
  display:block;
  border-radius:10px;
  padding: 5px;
  padding-bottom:8px;
  margin-bottom: 5px;
  color: #fff;
}

.statbar {
  font-family: "Splatfont";
  color:black;
  margin:0px !important;
  background: #000 !important;
}

.progress-bar-test {
  color:black !important;
  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
  text-shadow:
   -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
     1px 1px 0 #000;
  background: repeating-linear-gradient(
  45deg,
  #fe2472,
  #fe2472 15px,
  #cc1053 15px,
  #cc1053 30px
);
}

.maincontainer {
  background: #fff;
}

.abilitybox .col-md-12 {
  padding: 8px;
}

.nopadding {
  padding: 0px !important;
}

.lightup {
  border: 3px solid #fff;
}

.gearicon {
  width:64px;
  height:64px;
  margin:auto;
  display:block;
}


.bubble {
  background: rgba(255,255,255,0.2);
  border-radius: 10px;
  border-left: solid 4px rgba(255,255,255,0.4);
  border-top: solid 4px rgba(255,255,255,0.4);
  border-right: solid 4px rgba(0,0,0,0.2);
  border-bottom: solid 4px rgba(0,0,0,0.2);
  box-shadow: 0 0 0 2px rgba(255,255,255,0.3);
  margin: 5px;
  padding:2px;
}

.bubble.clickable:hover {
    background: rgba(255,255,255,0.4)
}

.lvl-target {
  border:solid 2px #fff;
}

.gear{
  background:#00ff00;
  border-radius: 25px;
  border: solid 4px #eee;
  padding: 3px;
  padding-top:0px;
  overflow:hidden;
}

.splatfont-white {
  font-family: "Splatfont";
  font-size: 16pt;
  color: #fff;
}

.gearheader {
  padding-top:4px;
  padding-bottom:2px;
  background: rgba(50,50,50,0.8);
  font-family: "Paintball";
  font-size: 16pt;
  text-align:center;
  color: #fff;
}

.weapon {
  background:#00ff00;
  border-radius: 25px;
  padding:10px;
  padding-top:0px;
  overflow:hidden;
}

.weaponheader {
  padding-top:4px;
  padding-bottom:2px;
  background: rgba(50,50,50,0.8);
  font-family: "Paintball";
  font-size: 16pt;
  text-align:center;
  color: #fff;
}

.weaponicon {
  max-height:90px;
  width:auto;
}

.weaponicon.bubble {
  border-left: solid 6px rgba(255,255,255,0.4);
  border-top: solid 6px rgba(255,255,255,0.4);
  border-right: solid 6px rgba(0,0,0,0.2);
  border-bottom: solid 6px rgba(0,0,0,0.2);
  box-shadow: 0 0 0 3px rgba(255,255,255,0.3);
}

.row.match-my-cols {
    overflow: hidden;
}

.matched{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
}

.grey {
  background: #eee
}

.bgstripes {
  background: repeating-linear-gradient(
  45deg,
  #5cfc42,
  #5cfc42 30px,
  #2fc123 30px,
  #2fc123 60px
);
}

